# auto-bedrock-chat-fastapi

./: .env.example  .env.test  .flake8  .gitignore  .hadolintignore  .markdownlint.json  .pre-commit-config.yaml  .python-black  .yamllint  CHANGELOG.md  CICD_QUICK_REFERENCE.md  CICD_WORKFLOWS.md  CONFIGURATION.md  Dockerfile  ENVIRONMENT_CONFIG.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_QUICK_REFERENCE.md  PRE_COMMIT_SETUP.md  README.md  deployment.py  docker-compose.sqlite.yml  docker-compose.yml  example_app.py  example_override.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  renovate.json
auto_bedrock_chat_fastapi/: __init__.py  admin_auth.py  admin_errors.py  admin_feedback_routes.py  admin_kb_routes.py  admin_synthesis_routes.py  app.py  auth_handler.py  bedrock_client.py  chat_manager.py  config.py  content_crawler.py  conversation_manager.py  defaults.py  embedding_pipeline.py  exceptions.py  feedback_store.py  kb_store_base.py  message_chunker.py  message_preprocessor.py  models.py  pgvector_kb_store.py  plugin.py  retry_handler.py  session_manager.py  sso_handler.py  sso_session_store.py  synthesizer.py  tool_manager.py  tool_message_processor.py  tools_generator.py  vector_db.py  websocket_handler.py
autolangchat/: __init__.py  app.py  config.py  conversation_routes.py  conversation_titler.py  defaults.py  exceptions.py  kb_credibility.py  message_preprocessor.py  models.py  plugin.py  session_manager.py  tool_manager.py  websocket_handler.py
docs/: AI_SUMMARIZATION.md  AUTHENTICATION.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_DELIVERY.md  AUTHENTICATION_FILES.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_QUICK_START.md  AUTHENTICATION_REFERENCE.md  AUTHENTICATION_SUMMARY.md  AUTHENTICATION_TESTING.md  BEDROCK_CLIENT_REFACTORING.md  CONFIGURATION.md  IMPLEMENTATION_COMPLETE.md  PRE_COMMIT_SETUP.md  TRUNCATION_CONFIG_SUMMARY.md  TRUNCATION_FEATURE_COMPLETE.md  TRUNCATION_QUICK_REF.md  UI_AUTH_INTEGRATION.md  VECTOR_DB_SETUP.md  WEB_CRAWLER_SETUP.md
examples/: README.md  crawler_examples.py  embedding_examples.py  express_integration_example.py  kb_sources.yaml  kb_sources_local.yaml  sso_azure_ad_example.py  sso_okta_example.py
scripts/: backup_kb.py
tests/: _autolangchat_imports.py  conftest.py  test_admin_auth.py  test_admin_capabilities.py  test_admin_errors.py  test_admin_feedback_routes.py  test_admin_kb_routes.py  test_admin_openapi.py  test_admin_sso.py  test_admin_synthesis_routes.py  test_admin_synthesizer.py  test_admin_token_routes.py  test_ai_history_summarization.py  test_ai_single_message_summarization.py  test_ai_summarization_comprehensive.py  test_auth_info_prompts.py  test_auth_metadata.py  test_authentication.py  test_basic.py  test_chat_manager.py  (+60 more)
(+165 files in other folders)
