[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "auto-bedrock-chat-fastapi"
version = "0.1.0"
description = "Automatically add AI chat capabilities to your FastAPI application with Amazon Bedrock integration"
readme = "README.md"
license = "MIT"
authors = ["Gabriel Briones <gabriel.briones.dev@gmail.com>"]
keywords = ["fastapi", "bedrock", "ai", "chat", "aws", "claude", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.100.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
boto3 = ">=1.34.0"
websockets = ">=11.0.0"
uvicorn = ">=0.23.0"
jinja2 = ">=3.1.0"
python-multipart = ">=0.0.6"
httpx = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
pre-commit = ">=3.0.0"
httpx = ">=0.24.0"

[tool.poetry.group.security.dependencies]
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"

[tool.poetry.group.monitoring.dependencies]
prometheus-client = ">=0.17.0"
structlog = ">=23.0.0"

[tool.poetry.urls]
Homepage = "https://github.com/gabrielbriones/auto-bedrock-chat-fastapi"
Documentation = "https://gabrielbriones.github.io/auto-bedrock-chat-fastapi/"
Repository = "https://github.com/gabrielbriones/auto-bedrock-chat-fastapi"
Issues = "https://github.com/gabrielbriones/auto-bedrock-chat-fastapi/issues"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=auto_bedrock_chat_fastapi --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true